--- a/res/application/views/empresa/inicio_movil.html.twig
+++ b/res/application/views/empresa/inicio_movil.html.twig
@@ -4,5 +4,8 @@
 {% endblock title %}
 
 {% block content %}
+    {% include "components/top_menu.html.twig" %}
+    {% include "components/header_empresa.html.twig" %}
     {% include "components/navbar_empresa.html.twig" %}
+
 {% endblock content %}
