--- a/res/application/views/components/header_empresa.html.twig
+++ b/res/application/views/components/header_empresa.html.twig
@@ -1,18 +1,27 @@
-
-<div class="row">
-    <div class="col-xs-10">
-        LOGO
+<div class="row header">
+    <div class="col-xs-4 col-xs-offset-4">
+        <img class="img-responsive center-block" src="{{ base_url() }}uploads/resize/SOP/logos1/{{ empresa.logo }}" alt="Logo de la empresa">
     </div>
-    <!-- /.col-xs-12 -->
-    <div class="col-xs-2">
-        
+    <div class="col-xs-2 pull-right">
+        <img class="inline-block" src="{{ img_url() }}membresia/{{ membresia.logo }}" alt="Icono Membresia" width="60">
+        {% if empresa.verificacion == 'Y' %}
+            <img class="inline-block" src="{{ img_url() }}membresia/Check_mark__64.png" alt="Icono de verificacion" width="60">
+        {% endif %}
     </div>
     <!-- /.col-xs-2 -->
+    <!-- TODO: Verificar la url del logo de la empresa. -->
 </div>
 <!-- /.row -->
 <div class="row">
     <div class="col-xs-12">
-        
+        <h1 class="text-center">
+            {{ empresa.nombre }}
+        </h1>
+        <h3 class="text-center ">
+            <i class="fa fa-map-marker font-naranja"></i>
+            {{ usuario.ciudad|title }}
+        </h3>
+
     </div>
     <!-- /.col-xs-12 -->
 </div>
