Adelanto del maquetado vista movil inicio op

--- a/res/application/views/components/header_empresa.html.twig
+++ b/res/application/views/components/header_empresa.html.twig
@@ -1,11 +1,12 @@
 <div class="row header">
-    <div class="col-xs-4 col-xs-offset-4">
-        <img class="img-responsive center-block" src="{{ base_url() }}uploads/resize/SOP/logos1/{{ empresa.logo }}" alt="Logo de la empresa">
+    <div class="col-xs-6 col-xs-offset-3">
+        <img class="img-responsive center-block logo" src="{{ base_url() }}uploads/resize/SOP/logos1/{{ empresa.logo }}" alt="Logo de la empresa">
+        <!-- <img class="img-responsive center-block logo" src="http://lorempixel.com/800/600/" alt="Logo de la empresa"> -->
     </div>
-    <div class="col-xs-2 pull-right">
-        <img class="inline-block" src="{{ img_url() }}membresia/{{ membresia.logo }}" alt="Icono Membresia" width="60">
+    <div class="col-xs-3 pull-right">
+        <img class="inline-block" src="{{ img_url() }}membresia/{{ membresia.logo }}" alt="Icono Membresia" width="40%">
         {% if empresa.verificacion == 'Y' %}
-            <img class="inline-block" src="{{ img_url() }}membresia/Check_mark__64.png" alt="Icono de verificacion" width="60">
+            <img class="inline-block" src="{{ img_url() }}membresia/Check_mark__64.png" alt="Icono de verificacion" width="40%">
         {% endif %}
     </div>
     <!-- /.col-xs-2 -->
