--- a/res/application/views/components/top_menu.html.twig
+++ b/res/application/views/components/top_menu.html.twig
@@ -1,7 +1,7 @@
 <div class="row">
-	<div class="col-xs-12 top_menu">
+	<div class="top_menu">
 		<img src="http://www.proveedor.com.co/assets/img/imagen_empresa/captura1.png" class="imagen">
-		<p class="texto pull-right">
+    <p class="texto pull-right">
 			<i class="fa fa-pencil icono"></i>
 			Registro Gratis
 		</p>
