--- a/res/assets/css/maycol.css
+++ b/res/assets/css/maycol.css
@@ -1,19 +1,12 @@
 .top_menu{
 	background: #FF7F27;
 }
-.top_menu .boton{
-	
-}
 .top_menu .imagen{
 	width: 45%;
 	display: inline-block;
 }
-.top_menu .texto{
+.top_menu p{
 	color:white;
-	font-size: 13px;
 	display: inline-block;
-	padding: 4px 4px 0px;
-}
-.top_menu .icono{
-	font-size: 14px;
+	padding: 3% 1%;
 }
