--- a/res/application/views/empresa/inicio_movil.html.twig
+++ b/res/application/views/empresa/inicio_movil.html.twig
@@ -2,16 +2,23 @@
 {% block title %}
     Pagina empresa 
 {% endblock title %}
-
+{% block styles %}
+    {{ parent()}}
+    {# Libreria para sliders #}
+    <link rel="stylesheet" href="{{assets_url()}}slick/slick/slick.css">
+{% endblock styles %}
 {% block content %}
     {% include "components/top_menu.html.twig" %}
     {% include "components/header_empresa.html.twig" %}
     {% include "components/navbar_empresa.html.twig" %}
     {% include "components/banners.html.twig" %}
-    {% include "components/slider-touch.html.twig" with {'items' : empresa.videos} only %}
+    {# Slider videos #}
+    {% include "components/slider-touch.html.twig" %}
 {% endblock content %}
 
 {% block javascripts %}
     {{ parent() }}
+    {# Libreria para sliders #}
+    <script src="{{ assets_url() }}slick/slick/slick.min.js" ></script>
     <script src="{{js_url()}}slider.js"></script>
 {% endblock javascripts %}
