Slider de videos y de productos

--- a/res/application/views/empresa/inicio_movil.html.twig
+++ b/res/application/views/empresa/inicio_movil.html.twig
@@ -13,7 +13,9 @@
     {% include "components/navbar_empresa.html.twig" %}
     {% include "components/banners.html.twig" %}
     {# Slider videos #}
-    {% include "components/slider-touch.html.twig" %}
+    {% include "components/slider-touch-videos.html.twig" %}
+    
+    {% include "components/slider-touch-productos.html.twig" %}
 {% endblock content %}
 
 {% block javascripts %}
