Maquetado del menú de navegación móvil

--- a/res/application/views/components/navbar_empresa.html.twig
+++ b/res/application/views/components/navbar_empresa.html.twig
@@ -1,6 +1,15 @@
 <div class="row">
-    <div class="col-xs-12">
-        NAVBAR
+    <div class="col-xs-12 navbar_empresa">
+        <nav class="navbar navbar-default navegacion_empresa">
+    		<ul class="list-inline navbar_emp">
+      			<li class="menu_item"><a href="#" class="link_menu"><i class="glyphicon glyphicon-home icono"></i></a></li>
+      			<li class="menu_item"><a href="#" class="link_menu"><i class="glyphicon glyphicon-list"></i></a></li>
+      			<li class="menu_item"><a href="#" class="link_menu"><i class="glyphicon glyphicon-briefcase"></i></a></li>
+      			<li class="menu_item"><a href="#" class="link_menu"><i class="fa fa-file-text-o"></i></a></li>
+      			<li class="menu_item"><a href="#" class="link_menu"><i class="fa fa-phone"></i></a></li>
+      			<li class="menu_item"><a href="#" class="link_menu"><i class="glyphicon glyphicon-download-alt"></i></a></li>
+    		</ul>
+		</nav>
     </div>
     <!-- /.col-xs-12 -->
 </div>
