--- a/res/assets/css/maycol.css
+++ b/res/assets/css/maycol.css
@@ -10,3 +10,33 @@
 	display: inline-block;
 	padding: 3% 1%;
 }
+.navbar_empresa{
+	padding: 0px;
+}
+.navbar_empresa .navegacion_empresa{
+	background: transparent;
+    border-right: 0;
+    border-left: 0;
+    border-top-color: #EDEDED;
+    border-top-width: 3px;
+    box-shadow: inset 0 0px;
+    border-bottom-color: #0080C0;
+    border-bottom-width: 4px;
+}
+.navbar_empresa .navbar_emp{
+	padding: 13px 10px 0px 13px;
+}
+.navbar_empresa .menu_item{
+	width: 50px;
+    padding-left: 25px;
+}
+.navbar_empresa .menu_item:active{
+	color:orange;
+}
+.navbar_empresa .link_menu{
+	font-size: 16px;
+    color: #808080;
+}
+.navbar_empresa .active:hover{
+	color:orange;
+}
