Las TAGS estan implementadas

--- a/res/application/views/components/slider-touch-productos.html.twig
+++ b/res/application/views/components/slider-touch-productos.html.twig
@@ -1,10 +1,33 @@
 <div class="row">
     <div class="multiple-items">
-        <div><img src="http://lorempixel.com/100/71/" alt=""></div>
-        <div><img src="http://lorempixel.com/100/72/" alt=""></div>
-        <div><img src="http://lorempixel.com/100/73/" alt=""></div>
-        <div><img src="http://lorempixel.com/100/74/" alt=""></div>
-        <div><img src="http://lorempixel.com/100/75/" alt=""></div>
-        <div><img src="http://lorempixel.com/100/76/" alt=""></div>
+        <div>
+        <img src="http://lorempixel.com/100/71/" alt="">
+        Abrazadera 1 pie zincada 57
+        </div>
+        <div>
+        <img src="http://lorempixel.com/100/72/" alt="">
+        Abrazadera 1 pie zincada 59
+        </div>
+        <div>
+        <img src="http://lorempixel.com/100/73/" alt="">
+        Abrazadera 1 pie zincada 61
+        </div>
+        <div>
+        <img src="http://lorempixel.com/100/74/" alt="">
+        Abrazadera 1 pie zincada 63
+        </div>
+        <div>
+        <img src="http://lorempixel.com/100/75/" alt="">
+        Abrazadera 1 pie zincada 65
+        </div>
+        <div>
+        <img src="http://lorempixel.com/100/76/" alt="">
+        
+        </div>
     </div>
 </div>
+
+
+
+
+
