--- a/res/application/views/empresa/inicio_movil.html.twig
+++ b/res/application/views/empresa/inicio_movil.html.twig
@@ -14,8 +14,9 @@
     {% include "components/banners.html.twig" %}
     {# Slider videos #}
     {% include "components/slider-touch-videos.html.twig" %}
-    
+
     {% include "components/slider-touch-productos.html.twig" %}
+    {% include "components/etiquetas.html.twig" %}
 {% endblock content %}
 
 {% block javascripts %}
