--- a/res/application/views/components/slider-touch-videos.html.twig
+++ b/res/application/views/components/slider-touch-videos.html.twig
@@ -1,21 +1,21 @@
 <div class="row">
     <div class="multiple-items">
-        <div>
+        <div class="video">
             <iframe src="https://www.youtube.com/embed/eWK5DUlaJhw" frameborder="0" allowfullscreen></iframe>
         </div>
-        <div>
+        <div class="video">
             <iframe src="https://www.youtube.com/embed/6FfjQDfRx0k" frameborder="0" allowfullscreen></iframe>
         </div>        
-        <div>
+        <div class="video">
             <iframe src="https://www.youtube.com/embed/Ofcg6qVqwlk" frameborder="0" allowfullscreen></iframe>
         </div>
-        <div>
+        <div class="video">
             <iframe src="https://www.youtube.com/embed/JfkDyIYRsaU" frameborder="0" allowfullscreen></iframe>
         </div>
-        <div>
+        <div class="video">
             <iframe src="https://www.youtube.com/embed/JfkDyIYRsaU" frameborder="0" allowfullscreen></iframe>
         </div>
-        <div>
+        <div class="video">
             <iframe src="https://www.youtube.com/embed/JfkDyIYRsaU" frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
