--- a/res/application/views/components/etiquetas.html.twig
+++ b/res/application/views/components/etiquetas.html.twig
@@ -11,7 +11,11 @@
   </ul>
 </div>
 
-
+<!-- Este codigo es para que desde backend se llamen todas las etiquetas - Carlos Martinez-->
+<!-- 
+{% for tag in tags %}
+        <li><a href="{{url}}" class="tag">{{palabra}}</a></li>
+{% endfor %} -->
 
 
 
