Instalacion de font awesome

--- a/res/application/views/_layouts/base.html.twig
+++ b/res/application/views/_layouts/base.html.twig
@@ -8,7 +8,7 @@
     {% block styles %}
         <link rel="stylesheet" href="{{ assets_url() }}bootstrap336/css/bootstrap.min.css">
         <link rel="stylesheet" href="{{ assets_url() }}bootstrap336/css/bootstrap-theme.min.css">
-        <link rel="stylesheet" href="{{ css_url() }}font-awesome.min.css">
+        <link rel="stylesheet" href="{{ assets_url() }}font-awesome-450/css/font-awesome.min.css">
         <link rel="stylesheet" href="{{ css_url() }}maycol.css">
         <link rel="stylesheet" href="{{ css_url() }}carlos.css">
     {% endblock styles %}
