--- a/res/application/views/empresa/inicio_movil.html.twig
+++ b/res/application/views/empresa/inicio_movil.html.twig
@@ -6,12 +6,15 @@
     {{ parent()}}
     {# Libreria para sliders #}
     <link rel="stylesheet" href="{{assets_url()}}slick/slick/slick.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/css/swiper.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/css/swiper.min.css">
 {% endblock styles %}
 {% block content %}
     {% include "components/top_menu.html.twig" %}
     {% include "components/header_empresa.html.twig" %}
     {% include "components/navbar_empresa.html.twig" %}
     {% include "components/banners.html.twig" %}
+    {% include "components/slider-productos-principales.html.twig" %}
     {# Slider videos #}
     {% include "components/slider-touch-videos.html.twig" %}
 
@@ -24,4 +27,19 @@
     {# Libreria para sliders #}
     <script src="{{ assets_url() }}slick/slick/slick.min.js" ></script>
     <script src="{{js_url()}}slider.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/js/swiper.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/js/swiper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/js/swiper.jquery.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/js/swiper.jquery.min.js"></script>
+    <script>        
+    var mySwiper = new Swiper ('.swiper-container', {
+        // Optional parameters
+        direction: 'horizontal',
+        loop: true,
+        spaceBetween: 30,
+        slidesPerView: 1,
+        touchEventsTarget: 'wrapper',
+        simulateTouch: true,
+    })        
+    </script>
 {% endblock javascripts %}
