--- a/res/assets/css/maycol.css
+++ b/res/assets/css/maycol.css
@@ -37,3 +37,51 @@
 .navbar_empresa a:focus{
 	color: #FF7F27;
 }
+.productos_principales{
+	margin-top: 15px;
+}
+.productos_principales .texto_titulo{
+	font-size: 20px;
+    font-weight: bold;
+}
+.productos_principales .nombre_producto{
+	font-size: 18px;
+    color: black;
+    margin: 0px;
+}
+.productos_principales .precio{
+	font-size: 18px;
+}
+.productos_principales .swiper-container {
+    width: 300px;
+    height: 200px;
+}
+.productos_principales .item_slider_producto{
+	width: 200px;
+}
+.productos_principales .imagen{
+	width: 100%
+}
+.productos_principales .ver_todo{
+	background: #FF7F27;
+    color: white;
+    font-size: 14px;
+    margin-bottom: 15px;
+    float: right;
+}
+.productos_principales .solicitud{
+	width: 100%;
+    height: 50px;
+    background: #ff7f27;
+    color: #fff;
+    border-radius: 3px;
+    margin-bottom: 15px;
+}
+.productos_principales .icono{
+	font-size: 20px;
+    margin-right: 10px;
+}
+.productos_principales .texto_solicitud{
+	font-size: 18px;
+    margin-top: 5px;
+}
