Algunas correciones en cuanto diseño, titulos y demas

--- a/res/application/views/components/slider-productos-principales.html.twig
+++ b/res/application/views/components/slider-productos-principales.html.twig
@@ -1,27 +1,30 @@
 <div class="row">
 	<div class="col-xs-12 productos_principales">
 		<p class="texto_titulo">Productos Principales</p>
-		<div class="swiper-container">
-    		<!-- Additional required wrapper -->
-    		<div class="swiper-wrapper">
-        		<!-- Slides -->
-        		<div class="item_slider_producto">
-        			<img src="http://lorempixel.com/100/71/" alt="" class="imagen">
-        			<p class="nombre_producto">Insertar Variable para nombre</p>
-        			<p class="precio font-naranja">Insertar variable precio</p>
-        		</div>
-        		<div class="item_slider_producto">
-        			<img src="http://lorempixel.com/100/71/" alt="" class="imagen">
-        			<p class="nombre_producto">Insertar Variable para nombre</p>
-        			<p class="precio font-naranja">Insertar variable precio</p>
-        		</div>
-        		<div class="item_slider_producto">
-        			<img src="http://lorempixel.com/100/71/" alt="" class="imagen">
-        			<p class="nombre_producto">Insertar Variable para nombre</p>
-        			<p class="precio font-naranja">Insertar variable precio</p>
-        		</div>
-    		</div>
-		</div>
+        <div class="multiple-items">
+            <div class="item_slider_producto">
+                <img src="http://lorempixel.com/100/71/" alt="" class="imagen">
+                <p class="nombre_producto">Insertar Variable para nombre</p>
+                <p class="precio font-naranja">Insertar variable precio</p>
+            </div>
+            <div class="item_slider_producto">
+                <img src="http://lorempixel.com/100/72/" alt="" class="imagen">
+                <p class="nombre_producto">Insertar Variable para nombre</p>
+                <p class="precio font-naranja">Insertar variable precio</p>
+            </div>
+            <div class="item_slider_producto">
+                <img src="http://lorempixel.com/100/73/" alt="" class="imagen">
+                <p class="nombre_producto">Insertar Variable para nombre</p>
+                <p class="precio font-naranja">Insertar variable precio</p>
+            </div>
+            <div class="item_slider_producto">
+                <img src="http://lorempixel.com/100/74/" alt="" class="imagen">
+                <p class="nombre_producto">Insertar Variable para nombre</p>
+                <p class="precio font-naranja">Insertar variable precio</p>
+            </div>
+        </div>
+
+		
 		<div class="col-xs-12">
 			<button class="btn btn-default ver_todo">Ver Todos</button>
 		</div>
