--- a/res/application/views/components/slider-touch-productos.html.twig
+++ b/res/application/views/components/slider-touch-productos.html.twig
@@ -1,33 +1,31 @@
 <div class="row">
-    <div class="multiple-items">
-        <div>
-        <img src="http://lorempixel.com/100/71/" alt="">
-        Abrazadera 1 pie zincada 57
-        </div>
-        <div>
-        <img src="http://lorempixel.com/100/72/" alt="">
-        Abrazadera 1 pie zincada 59
-        </div>
-        <div>
-        <img src="http://lorempixel.com/100/73/" alt="">
-        Abrazadera 1 pie zincada 61
-        </div>
-        <div>
-        <img src="http://lorempixel.com/100/74/" alt="">
-        Abrazadera 1 pie zincada 63
-        </div>
-        <div>
-        <img src="http://lorempixel.com/100/75/" alt="">
-        Abrazadera 1 pie zincada 65
-        </div>
-        <div>
-        <img src="http://lorempixel.com/100/76/" alt="">
-        
+    <div class="col-xs-12">
+        <h3><strong>Galería de Imágenes</strong></h3>
+        <div class="multiple-items">
+            <div>
+                <img src="http://lorempixel.com/100/71/" alt="">
+                <span>Abrazadera 1 pie zincada 57</span>
+            </div>
+            <div>
+                <img src="http://lorempixel.com/100/72/" alt="">
+                <span>Abrazadera 1 pie zincada 59</span>
+            </div>
+            <div>
+                <img src="http://lorempixel.com/100/73/" alt="">
+                <span>Abrazadera 1 pie zincada 61</span>
+            </div>
+            <div>
+                <img src="http://lorempixel.com/100/74/" alt="">
+                <span>Abrazadera 1 pie zincada 63</span>
+            </div>
+            <div>
+                <img src="http://lorempixel.com/100/75/" alt="">
+                <span>Abrazadera 1 pie zincada 65</span>
+            </div>
+            <div>
+                <img src="http://lorempixel.com/100/76/" alt="">
+                <span>1 pie zincada 65</span>
+            </div>
         </div>
     </div>
 </div>
-
-
-
-
-
