--- a/res/application/views/components/slider-touch-videos.html.twig
+++ b/res/application/views/components/slider-touch-videos.html.twig
@@ -1,22 +1,25 @@
 <div class="row">
-    <div class="multiple-items">
-        <div class="video">
-            <iframe src="https://www.youtube.com/embed/eWK5DUlaJhw" frameborder="0" allowfullscreen></iframe>
-        </div>
-        <div class="video">
-            <iframe src="https://www.youtube.com/embed/6FfjQDfRx0k" frameborder="0" allowfullscreen></iframe>
-        </div>        
-        <div class="video">
-            <iframe src="https://www.youtube.com/embed/Ofcg6qVqwlk" frameborder="0" allowfullscreen></iframe>
-        </div>
-        <div class="video">
-            <iframe src="https://www.youtube.com/embed/JfkDyIYRsaU" frameborder="0" allowfullscreen></iframe>
-        </div>
-        <div class="video">
-            <iframe src="https://www.youtube.com/embed/JfkDyIYRsaU" frameborder="0" allowfullscreen></iframe>
-        </div>
-        <div class="video">
-            <iframe src="https://www.youtube.com/embed/JfkDyIYRsaU" frameborder="0" allowfullscreen></iframe>
+    <div class="col-xs-12">
+        <h3><strong>Videos de la Empresa</strong></h3>
+        <div class="multiple-items">
+            <div class="video">
+                <iframe src="https://www.youtube.com/embed/eWK5DUlaJhw" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <div class="video">
+                <iframe src="https://www.youtube.com/embed/6FfjQDfRx0k" frameborder="0" allowfullscreen></iframe>
+            </div>        
+            <div class="video">
+                <iframe src="https://www.youtube.com/embed/Ofcg6qVqwlk" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <div class="video">
+                <iframe src="https://www.youtube.com/embed/JfkDyIYRsaU" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <div class="video">
+                <iframe src="https://www.youtube.com/embed/JfkDyIYRsaU" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <div class="video">
+                <iframe src="https://www.youtube.com/embed/JfkDyIYRsaU" frameborder="0" allowfullscreen></iframe>
+            </div>
         </div>
     </div>
 </div>
