Los videos ya se muestran y funcionan correctamente

--- a/res/application/views/components/slider-touch-productos.html.twig
+++ b/res/application/views/components/slider-touch-productos.html.twig
@@ -1,30 +1,30 @@
 <div class="row">
     <div class="col-xs-12">
         <h3><strong>Galería de Imágenes</strong></h3>
-        <div class="multiple-items">
+        <div class="multiple-items slider-imagenes">
             <div>
                 <img src="http://lorempixel.com/100/71/" alt="">
-                <span>Abrazadera 1 pie zincada 57</span>
+                <p>Abrazadera 1 pie zincada 57</p>
             </div>
             <div>
                 <img src="http://lorempixel.com/100/72/" alt="">
-                <span>Abrazadera 1 pie zincada 59</span>
+                <p>Abrazadera 1 pie zincada 59</p>
             </div>
             <div>
                 <img src="http://lorempixel.com/100/73/" alt="">
-                <span>Abrazadera 1 pie zincada 61</span>
+                <p>Abrazadera 1 pie zincada 61</p>
             </div>
             <div>
                 <img src="http://lorempixel.com/100/74/" alt="">
-                <span>Abrazadera 1 pie zincada 63</span>
+                <p>Abrazadera 1 pie zincada 63</p>
             </div>
             <div>
                 <img src="http://lorempixel.com/100/75/" alt="">
-                <span>Abrazadera 1 pie zincada 65</span>
+                <p>Abrazadera 1 pie zincada 65</p>
             </div>
             <div>
                 <img src="http://lorempixel.com/100/76/" alt="">
-                <span>1 pie zincada 65</span>
+                <p>1 pie zincada 65</p>
             </div>
         </div>
     </div>
