--- a/res/assets/css/carlos.css
+++ b/res/assets/css/carlos.css
@@ -17,24 +17,9 @@
 .slick-slide img {
     width: 90%;
 }
-.video {
-    /*position: relative;*/
-    padding-bottom: 10%;
-    /*padding-bottom: 25px;*/
-    /*padding-bottom: 56.25%;*/
-    /* 16:9 */
-    /*padding-top: 25px;*/
-    height: 0;
+.separador{
+  width: 40px !important;
 }
-
-.video iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-}
-
-
 .tags {
   list-style: none;
   margin: 0;
@@ -90,4 +75,7 @@
 
 .tag:hover::after {
    border-left-color: #FFF; 
+}
+.slider-imagenes p{
+  padding-right: 10px;
 }
