--- a/res/application/views/components/etiquetas.html.twig
+++ b/res/application/views/components/etiquetas.html.twig
@@ -1,14 +1,17 @@
 <div class="row">
-  <ul class="tags">
-    <li><a href="#" class="tag">botas</a></li>
-    <li><a href="#" class="tag">cascos</a></li>
-    <li><a href="#" class="tag">guantes</a></li>
-    <li><a href="#" class="tag">gafas</a></li>
-    <li><a href="#" class="tag">señalización</a></li>    
-    <li><a href="#" class="tag">botas</a></li>
-    <li><a href="#" class="tag">cascos</a></li>
-    <li><a href="#" class="tag">guantes</a></li>
-  </ul>
+    <div class="col-xs-12">
+        <h3><strong>Etiquetas</strong></h3>
+        <ul class="tags">
+            <li><a href="#" class="tag">botas</a></li>
+            <li><a href="#" class="tag">cascos</a></li>
+            <li><a href="#" class="tag">guantes</a></li>
+            <li><a href="#" class="tag">gafas</a></li>
+            <li><a href="#" class="tag">señalización</a></li>    
+            <li><a href="#" class="tag">botas</a></li>
+            <li><a href="#" class="tag">cascos</a></li>
+            <li><a href="#" class="tag">guantes</a></li>
+        </ul>
+    </div>
 </div>
 
 <!-- Este codigo es para que desde backend se llamen todas las etiquetas - Carlos Martinez-->
