--- a/res/application/views/components/slider-productos-principales.html.twig
+++ b/res/application/views/components/slider-productos-principales.html.twig
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="col-xs-12 productos_principales">
-		<p class="texto_titulo">Productos Principales</p>
+        <h3><strong>Productos Principales</strong></h3>
         <div class="multiple-items">
             <div class="item_slider_producto">
                 <img src="http://lorempixel.com/100/71/" alt="" class="imagen">
