--- a/res/application/views/components/slider-touch-videos.html.twig
+++ b/res/application/views/components/slider-touch-videos.html.twig
@@ -3,23 +3,21 @@
         <h3><strong>Videos de la Empresa</strong></h3>
         <div class="multiple-items">
             <div class="video">
-                <iframe src="https://www.youtube.com/embed/eWK5DUlaJhw" frameborder="0" allowfullscreen></iframe>
+                <iframe width="140" height="70" src="https://www.youtube.com/embed/eWK5DUlaJhw" frameborder="0" allowfullscreen></iframe>
             </div>
+            <div class="separador"></div>
             <div class="video">
-                <iframe src="https://www.youtube.com/embed/6FfjQDfRx0k" frameborder="0" allowfullscreen></iframe>
-            </div>        
-            <div class="video">
-                <iframe src="https://www.youtube.com/embed/Ofcg6qVqwlk" frameborder="0" allowfullscreen></iframe>
+                <iframe width="140" height="70" src="https://www.youtube.com/embed/6FfjQDfRx0k" frameborder="0" allowfullscreen></iframe>
             </div>
+            <div class="separador"></div>        
             <div class="video">
-                <iframe src="https://www.youtube.com/embed/JfkDyIYRsaU" frameborder="0" allowfullscreen></iframe>
+                <iframe width="140" height="70" src="https://www.youtube.com/embed/Ofcg6qVqwlk" frameborder="0" allowfullscreen></iframe>
             </div>
+            <div class="separador"></div>
             <div class="video">
-                <iframe src="https://www.youtube.com/embed/JfkDyIYRsaU" frameborder="0" allowfullscreen></iframe>
+                <iframe width="140" height="70" src="https://www.youtube.com/embed/Ofcg6qVqwlk" frameborder="0" allowfullscreen></iframe>
             </div>
-            <div class="video">
-                <iframe src="https://www.youtube.com/embed/JfkDyIYRsaU" frameborder="0" allowfullscreen></iframe>
-            </div>
+            <div class="separador"></div>
         </div>
     </div>
 </div>
