--- a/res/application/views/_layouts/base.html.twig
+++ b/res/application/views/_layouts/base.html.twig
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    {% block meta %}{% endblock meta %}
     <title>{% block title %}{% endblock %} - Proveedor.com.co</title>
     {% block styles %}
         <link rel="stylesheet" href="{{ assets_url() }}bootstrap336/css/bootstrap.min.css">
@@ -12,6 +13,7 @@
         <link rel="stylesheet" href="{{ css_url() }}maycol.css">
         <link rel="stylesheet" href="{{ css_url() }}carlos.css">
     {% endblock styles %}
+
 </head>
 <body>
     <div class="container-fluid">
