Revision y reparacion de daños del sistemas de mensajeria, optimizado para sistema OP: cargaa maxiva de empresa: Retoques de maquetado y funconalidades tablero de usuario.

--- a/res/assets/css/config_OroPlatino/top_menu_config.css
+++ b/res/assets/css/config_OroPlatino/top_menu_config.css
@@ -52,7 +52,7 @@
 .top_menu_conf{
 	width: 100%;
 	height: 62px;
-	border-bottom: 4px solid #00a2e8;
+	border-bottom: 4px solid #337ab7;
 }
 .salir{
 	background-color: transparent !important;
