Terminado el maquetado del componente nuestra empresa, añadida clase para mantener color en las etiquetas H3

--- a/res/application/views/components/slider-touch-productos.html.twig
+++ b/res/application/views/components/slider-touch-productos.html.twig
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-12">
-        <h3><strong>Galería de Imágenes</strong></h3>
+        <h3 class="titulos"><strong>Galería de Imágenes</strong></h3>
         <div class="multiple-items slider-imagenes">
             <div>
                 <img src="http://lorempixel.com/100/71/" alt="">
