--- a/res/application/views/empresa/inicio_movil.html.twig
+++ b/res/application/views/empresa/inicio_movil.html.twig
@@ -32,6 +32,7 @@
     {% include "components/navbar_empresa.html.twig" %}
     {% include "components/banners.html.twig" %}
     {% include "components/slider-productos-principales.html.twig" %}
+    {% include "components/nuestra-empresa.html.twig" %}
     {# Slider videos #}
     {% include "components/slider-touch-videos.html.twig" %}
 
