--- a/res/application/views/components/slider-productos-principales.html.twig
+++ b/res/application/views/components/slider-productos-principales.html.twig
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="col-xs-12 productos_principales">
-        <h3><strong>Productos Principales</strong></h3>
+        <h3 class="titulos"><strong>Productos Principales</strong></h3>
         <div class="multiple-items">
             <div class="item_slider_producto">
                 <img src="http://lorempixel.com/100/71/" alt="" class="imagen">
@@ -23,8 +23,6 @@
                 <p class="precio font-naranja">Insertar variable precio</p>
             </div>
         </div>
-
-		
 		<div class="col-xs-12">
 			<button class="btn btn-default ver_todo">Ver Todos</button>
 		</div>
