--- a/res/application/views/components/slider-touch-videos.html.twig
+++ b/res/application/views/components/slider-touch-videos.html.twig
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-12">
-        <h3><strong>Videos de la Empresa</strong></h3>
+        <h3 class="titulos"><strong>Videos de la Empresa</strong></h3>
         <div class="multiple-items">
             <div class="video">
                 <iframe width="140" height="70" src="https://www.youtube.com/embed/eWK5DUlaJhw" frameborder="0" allowfullscreen></iframe>
