Ajuste de posición del texto de productos principales

--- a/res/assets/css/maycol.css
+++ b/res/assets/css/maycol.css
@@ -132,6 +132,7 @@
     display: inline-block;
     margin-top: 10px;
     color: black;
+    line-height: 16px;
 }
 .nuestra_empresa .catalogo{
     color: #808080;
