--- a/res/assets/css/maycol.css
+++ b/res/assets/css/maycol.css
@@ -88,11 +88,10 @@
 }
 .nuestra_empresa .titulo_membresia{
     color:#808080;
-    padding-bottom: 5px;
-    border-bottom: solid 1px #D9D9D9;
 }
 .nuestra_empresa .titulo_validacion{
     color:#808080;
+    margin-left: 10px;
 }
 .nuestra_empresa .img_membresia{
     margin-right: 2px;
@@ -111,8 +110,6 @@
     font-size: 15px;
     line-height: 14px;
     padding-bottom: 10px;
-    border-bottom: solid 1px #D9D9D9;
-    margin-bottom: 15px;
 }
 .nuestra_empresa .dato_empresa{
     color: #808080;
@@ -121,9 +118,9 @@
 .nuestra_empresa .dato_empresa_ppales{
     color: #808080;
     line-height: 5px;
-    margin-bottom: 20px;
+    padding-bottom: 10px;
     border-bottom: solid 1px #D9D9D9;
-    padding-bottom: 15px;
+    margin-bottom: 15px;
 }
 .nuestra_empresa .variable{
     color:black;
@@ -142,7 +139,7 @@
     margin-right: 5px;
 }
 .nuestra_empresa .solicitud{
-    width: 49%;
+    width: 47%;
     height: 50px;
     background: #ff7f27;
     color: #fff;
@@ -150,7 +147,7 @@
 }
 .nuestra_empresa .icono{
     font-size: 18px;
-    margin-right: 8px;
+    margin-right: 6px;
 }
 .nuestra_empresa .texto_solicitud{
     font-size: 18px;
