--- a/res/application/views/components/nuestra-empresa.html.twig
+++ b/res/application/views/components/nuestra-empresa.html.twig
@@ -2,12 +2,11 @@
 	<div class="col-xs-12 nuestra_empresa">
 		<h3 class="titulos"><strong>Nuestra Empresa</strong></h3>
 		<p class="font-naranja titulo_empresa"><strong>{{ empresa.nombre|title }}</strong></p>
-        <p class="titulo_membresia"><img class="inline-block img_membresia" src="{{ img_url() }}membresia/{{ membresia.logo }}" alt="Icono Membresia" width="10%">Empresa Platino <!-- insertar variable -->
+        <p class="titulo_membresia"><img class="inline-block img_membresia" src="{{ img_url() }}membresia/{{ membresia.logo }}" alt="Icono Membresia">Empresa Platino <!-- insertar variable -->
         {% if empresa.verificacion == 'Y' %}
-        <span class="titulo_validacion"><img class="inline-block img_membresia" src="{{ img_url() }}membresia/Check_mark__64.png" alt="Icono de verificacion" width="8%">Verificada</span></p><p class="ciudad"><i class="fa fa-map-marker font-naranja ico_puntero"></i>{{ usuario.ciudad|title }}</p>
+        <span class="titulo_validacion"><img class="inline-block img_verificacion" src="{{ img_url() }}membresia/Check_mark__64.png" alt="Icono de verificacion">Verificada</span></p><p class="ciudad"><i class="fa fa-map-marker font-naranja ico_puntero"></i>{{ usuario.ciudad|title }}</p>
        	{% endif %}
-        <p class="descripcion_empresa">
-        	{{empresa.descripcion}}</p>
+        <p class="descripcion_empresa">{{empresa.descripcion}}</p>
         <p class="dato_empresa">Ubicación: <span class="variable">{{ usuario.ciudad|title}}</span></p><!-- añadir variable departamento -->
         <p class="dato_empresa">Tipo de Empresa: <span class="variable">{{empresa.tipo|title}}</span></p>
         <p class="dato_empresa_ppales">Productos Principales: <span class="variable_ppales">{{empresa.productos_principales|title}}</span></p>
