--- a/res/assets/css/maycol.css
+++ b/res/assets/css/maycol.css
@@ -95,6 +95,11 @@
 }
 .nuestra_empresa .img_membresia{
     margin-right: 2px;
+    width: 7%;
+}
+.nuestra_empresa .img_verificacion{
+    width: 6%;
+    margin-right: 5px;
 }
 .nuestra_empresa .ciudad{
     padding-bottom: 5px;
@@ -103,7 +108,7 @@
 }
 .nuestra_empresa .ico_puntero{
     font-size: 20px;
-    padding-left: 10px;
+    padding-left: 5px;
     margin-right: 5px;
 }
 .nuestra_empresa .descripcion_empresa{
