Vista nosotros iniciada

--- a/res/application/views/components/boton_contactenos.html.twig
+++ b/res/application/views/components/boton_contactenos.html.twig
@@ -1,9 +1,9 @@
 <div class="row header">
     <div class="col-xs-12">
         <button class="btn btn-block btn-lg color-naranja">
-            <i class="fa fa-file-text icono"></i>
+            <i class="glyphicon glyphicon-envelope icono"></i>
             <strong>
-                SOLICITAR COTIZACIÓN
+                CONTÁCTENOS
             </strong>
         </button>
     </div>
