--- a/res/application/views/components/lista_productos.html.twig
+++ b/res/application/views/components/lista_productos.html.twig
@@ -18,6 +18,7 @@
                     </h4>
                     <div>
                         <span class="inline text-grey">
+
                             Pedido minimo:
                         </span>
                         <p class="inline">
@@ -40,6 +41,12 @@
                 </div>
             </div>
             <hr>
+        {% else %}
+            <div class="row">
+                <div class="col-xs-12">
+                    <p>La empresa no ha publicado productos</p>
+                </div>
+            </div>            
         {% endfor %}
     </div>
 </div>
