Terminado el componente contacto movil

--- a/res/application/views/empresa/inicio_movil.html.twig
+++ b/res/application/views/empresa/inicio_movil.html.twig
@@ -33,10 +33,12 @@
     {% include "components/banners.html.twig" %}
     {% include "components/slider-productos-principales.html.twig" %}
     {% include "components/nuestra-empresa.html.twig" %}
+
     {# Slider videos #}
     {% include "components/slider-touch-videos.html.twig" %}
 
     {% include "components/slider-touch-productos.html.twig" %}
+    {% include "components/contacto.html.twig" %}
     {% include "components/etiquetas.html.twig" %}
 {% endblock content %}
 
