Agregado el componente contacto en vista nosotros

--- a/res/application/views/empresa/nosotros_movil.html.twig
+++ b/res/application/views/empresa/nosotros_movil.html.twig
@@ -34,6 +34,7 @@
     {% include "components/nuestra-empresa.html.twig" %}
     {% include "components/redes_sociales.html.twig" %}
     {% include "components/boton_contactenos.html.twig" %}
+    {% include "components/contacto.html.twig" %}
     {% include "components/etiquetas.html.twig" %}
 {% endblock content %}
 
