Botones de contacto y telefono agregados

--- a/res/application/views/empresa/nosotros_movil.html.twig
+++ b/res/application/views/empresa/nosotros_movil.html.twig
@@ -32,6 +32,14 @@
     {% include "components/navbar_empresa.html.twig" %}
     {% include "components/boton_contactenos.html.twig" %}
     {% include "components/nuestra-empresa.html.twig" %}
+    <div class="row">
+        <div class="col-xs-6" style="padding-right: 1px">
+            {% include "components/boton_contactar.html.twig" %}
+        </div>
+        <div class="col-xs-6" style="padding-left: 1px">
+            {% include "components/boton_telefono.html.twig" %}
+        </div>
+    </div>
     {% include "components/redes_sociales.html.twig" %}
     {% include "components/boton_contactenos.html.twig" %}
     {% include "components/contacto.html.twig" %}
