Se reutiliza el componente botón solicitar cotización en contacto y productos principales

--- a/res/application/views/empresa/inicio_movil.html.twig
+++ b/res/application/views/empresa/inicio_movil.html.twig
@@ -32,6 +32,7 @@
     {% include "components/navbar_empresa.html.twig" %}
     {% include "components/banners.html.twig" %}
     {% include "components/slider-productos-principales.html.twig" %}
+    {% include "components/boton_solicitar_cotizacion.html.twig" %}
     {% include "components/nuestra-empresa.html.twig" %}
     <div class="row">
         <div class="col-xs-6" style="padding-right: 1px">
@@ -46,6 +47,7 @@
 
     {% include "components/slider-touch-productos.html.twig" %}
     {% include "components/contacto.html.twig" %}
+    {% include "components/boton_solicitar_cotizacion.html.twig" %}
     {% include "components/etiquetas.html.twig" %}
 {% endblock content %}
 
