--- a/res/application/views/components/redes_sociales.html.twig
+++ b/res/application/views/components/redes_sociales.html.twig
@@ -1,5 +1,5 @@
 <div class="row">
     <div class="col-xs-12">
-        <p>redes sociales</p>
+        <h3 class="titulos"><strong>Redes sociales</strong></h3>
     </div>
 </div>
