--- a/res/application/views/empresa/nosotros_movil.html.twig
+++ b/res/application/views/empresa/nosotros_movil.html.twig
@@ -5,10 +5,8 @@
 {% block styles %}
     {{ parent()}}
     {# Libreria para sliders #}
-    <link rel="stylesheet" href="{{assets_url()}}slick/slick/slick.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/css/swiper.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/css/swiper.min.css">
-        
 {% endblock styles %}
 {% block meta %}
     {# Aqui se deben agregar la información para el contenido que se comparte en redes sociales, si necesita ayuda de como identificar el contenido por favor verifique en https://developers.facebook.com/docs/sharing/webmasters#markup y https://dev.twitter.com/cards/types/summary-large-image #}
@@ -49,4 +47,18 @@
 {% block javascripts %}
     {{ parent() }}
     {# Libreria para sliders #}
+    <script src="{{js_url()}}social.js"></script>
+    <script>
+        jQuery(document).ready(function($) {
+           $('.share').ShareLink({
+                // se deben llenar los datos para compartir con los botones
+                title: '', 
+                text: '', 
+                image: '', 
+                url: '', 
+                width: 640, 
+                height: 480 
+            }) 
+        });
+    </script>
 {% endblock javascripts %}
