--- a/res/application/views/components/redes_sociales.html.twig
+++ b/res/application/views/components/redes_sociales.html.twig
@@ -1,5 +1,39 @@
 <div class="row">
     <div class="col-xs-12">
         <h3 class="titulos"><strong>Redes sociales</strong></h3>
+        <div class="botones-sociales">
+            <ul class="list-inline center-block text-center">
+            <li>
+                <a name="" type="button" class="share-btn share s_facebook">
+                    <i class="fa fa-facebook"></i>
+                </a>
+            </li>
+            <li>
+                <a name="" type="button" class="share-btn share s_plus">
+                    <i class="fa fa-google"></i>
+                </a>
+            </li>
+            <li>
+                <a name="" type="button" class="share-btn share s_twitter" href="https://twitter.com/intent/tweet?url=&amp;text=">
+                    <i class="fa fa-twitter"></i>
+                </a>
+            </li>
+            <li>
+                <a name="" type="button" class="share-btn share s_linkedin">
+                    <i class="fa fa-linkedin"></i>
+                </a>
+            </li>
+            <li>
+                <a name="" type="button" class="share-btn share s_whatsapp" href="whatsapp://send">
+                <i class="fa fa-whatsapp"></i>
+                </a>
+            </li>
+            <li>
+                <a name="" type="button" class="share-btn share s_email">
+                    <i class="fa fa-envelope"></i>
+                </a>
+            </li>
+        </ul>
+        </div>
     </div>
 </div>
