--- a/res/assets/css/carlos.css
+++ b/res/assets/css/carlos.css
@@ -94,3 +94,54 @@ span.text-grey{
 .center-vertical-text{
     padding: 6px;
 }
+.botones-sociales{
+  padding: 20px 0px;
+}
+.share-btn {
+      font-size: 24px;
+  -webkit-font-smoothing: subpixel-antialiased;
+  -webkit-transition: border .25s linear,color .25s linear,background-color .25s linear;
+  border-radius: 50%;
+  border: none;
+  color: #fff;
+  cursor:pointer;
+  padding: 10px;
+  transition: border .25s linear,color .25s linear,background-color .25s linear
+}
+.s_facebook {
+  background-color: #4769a5;
+  border-color: #354d79;
+  -webkit-box-shadow: inset 0 -2px 0 rgba(0,0,0,.15);
+  box-shadow: inset 0 -2px 0 rgba(0,0,0,.15)
+}
+.s_twitter {
+  background-color: #51a3bf;
+  border-color: #408299;
+  -webkit-box-shadow: inset 0 -2px 0 rgba(0,0,0,.15);
+  box-shadow: inset 0 -2px 0 rgba(0,0,0,.15)
+}
+.s_plus {
+  background-color: #bf3727;
+  border-color: #932b1f;
+  -webkit-box-shadow: inset 0 -2px 0 rgba(0,0,0,.15);
+  box-shadow: inset 0 -2px 0 rgba(0,0,0,.15)
+}
+.s_linkedin {
+  background-color: #2ba3e1;
+  border-color: #207aa8;
+  -webkit-box-shadow: inset 0 -2px 0 rgba(0,0,0,.15);
+  box-shadow: inset 0 -2px 0 rgba(0,0,0,.15)
+}
+
+.s_email {
+  background-color: #4c75a3;
+  border-color: #39587b;
+  -webkit-box-shadow: inset 0 -2px 0 rgba(0,0,0,.15);
+  box-shadow: inset 0 -2px 0 rgba(0,0,0,.15)
+}
+.s_whatsapp {
+  background-color: #08C65B;
+  border-color: #39587b;
+  -webkit-box-shadow: inset 0 -2px 0 rgba(0,0,0,.15);
+  box-shadow: inset 0 -2px 0 rgba(0,0,0,.15)
+}
