--- a/res/application/views/components/lista_catalogos.html.twig
+++ b/res/application/views/components/lista_catalogos.html.twig
@@ -21,7 +21,7 @@
         {% else %}
             <div class="row">
                 <div class="col-xs-12">
-                    <p>La empresa no ha publicado catalgos</p>
+                    <p>La empresa no ha publicado catalogos</p>
                 </div>
             </div>            
         {% endfor %}
