Mensaje de prueba para boton de redes sociales

--- a/res/application/views/components/redes_sociales.html.twig
+++ b/res/application/views/components/redes_sociales.html.twig
@@ -14,7 +14,7 @@
                 </a>
             </li>
             <li>
-                <a name="" type="button" class="share-btn share s_twitter" href="https://twitter.com/intent/tweet?url=&amp;text=">
+                <a name="" type="button" class="share-btn share s_twitter">
                     <i class="fa fa-twitter"></i>
                 </a>
             </li>
@@ -24,7 +24,7 @@
                 </a>
             </li>
             <li>
-                <a name="" type="button" class="share-btn share s_whatsapp" href="whatsapp://send">
+                <a name="" type="button" class="share-btn share s_whatsapp">
                 <i class="fa fa-whatsapp"></i>
                 </a>
             </li>
