--- a/res/application/views/empresa/nosotros_movil.html.twig
+++ b/res/application/views/empresa/nosotros_movil.html.twig
@@ -54,8 +54,8 @@
         jQuery(document).ready(function($) {
            $('.share').ShareLink({
                 // se deben llenar los datos para compartir con los botones
-                title: '', 
-                text: '', 
+                title: 'Lorem', 
+                text: 'Lorem ipsum dolor sit amet', 
                 image: '', 
                 url: '', 
                 width: 640, 
