--- a/res/assets/css/catalogo_producto/produc_prin_catalogo.css
+++ b/res/assets/css/catalogo_producto/produc_prin_catalogo.css
@@ -1,3 +1,9 @@
+.icon_catalogo
+{
+    font-size: 100px!important;
+    padding-top: 32px;
+    color: #4769A5;
+}
 .texto_tag {
     width: 100%;
     height: 74px;
