--- a/res/application/views/components/top_menu.html.twig
+++ b/res/application/views/components/top_menu.html.twig
@@ -1,13 +1,19 @@
 <div class="row">
 	<div class="top_menu">
-		<img src="http://www.proveedor.com.co/assets/img/imagen_empresa/captura1.png" class="imagen">
+	<a href="{{base_url()}}">
+		<img src="{{ img_url() }}proveedor-com-co-logo-empresas-haciendo-negocios.png" class="imagen">
+	</a>
     <p class="texto pull-right">
-			<i class="fa fa-pencil icono"></i>
-			Registro Gratis
+			<a href="{{ base_url() }}registro/registrar">
+				<i class="fa fa-pencil icono"></i>
+				Registro Gratis
+			</a>
 		</p>
 		<p class="texto pull-right">
-			<i class="fa fa-user icono"></i>
-			Ingresar
+			<a href="{{ base_url() }}logueo">
+				<i class="fa fa-user icono"></i>
+				Ingresar
+			</a>
 		</p>
 	</div>
 </div>
