--- a/res/assets/css/carlos.css
+++ b/res/assets/css/carlos.css
@@ -145,3 +145,10 @@ span.text-grey{
   -webkit-box-shadow: inset 0 -2px 0 rgba(0,0,0,.15);
   box-shadow: inset 0 -2px 0 rgba(0,0,0,.15)
 }
+.top_menu{
+  -webkit-box-shadow: 0px 2px 10px #999;
+  -moz-box-shadow: 0px 2px 10px #999;
+}
+.top_menu a{
+  color: #FFF;
+}
