--- a/res/application/views/components/navbar_empresa.html.twig
+++ b/res/application/views/components/navbar_empresa.html.twig
@@ -1,16 +1,38 @@
 <div class="row">
-    <div class="col-xs-12 navbar_empresa">
-        <nav class="navbar navbar-default navegacion_empresa">
-    		<ul class="list-inline navbar_emp">
-      			<li class="menu_item"><a href="#" class="link_menu"><i class="glyphicon glyphicon-home icono"></i></a></li>
-      			<li class="menu_item"><a href="#" class="link_menu"><i class="glyphicon glyphicon-list"></i></a></li>
-      			<li class="menu_item"><a href="#" class="link_menu"><i class="glyphicon glyphicon-briefcase"></i></a></li>
-      			<li class="menu_item"><a href="#" class="link_menu"><i class="fa fa-file-text-o"></i></a></li>
-      			<li class="menu_item"><a href="#" class="link_menu"><i class="fa fa-phone"></i></a></li>
-      			<li class="menu_item"><a href="#" class="link_menu"><i class="glyphicon glyphicon-download-alt"></i></a></li>
-    		</ul>
-		</nav>
+  <div class="navbar-empresa">
+    <div class="col-xs-2 active">
+      <button type="button" class="btn btn-lg btn-block">
+        <i class="glyphicon glyphicon-home"></i>
+      </button>
     </div>
-    <!-- /.col-xs-12 -->
+    <div class="col-xs-2">    
+      <button type="button" class="btn btn-lg btn-block">
+        <i class="glyphicon glyphicon-list"></i>
+      </button>
+    </div>
+    <div class="col-xs-2">
+      <button type="button" class="btn btn-lg btn-block">
+        <i class="glyphicon glyphicon-briefcase"></i>
+      </button>
+    </div>
+    <div class="col-xs-2">
+      <button type="button" class="btn btn-lg btn-block">
+        <i class="fa fa-file-text-o"></i>
+      </button>
+    </div>    
+    <div class="col-xs-2">
+      <button type="button" class="btn btn-lg btn-block">
+        <i class="fa fa-phone"></i>
+      </button>
+    </div>
+
+    <div class="col-xs-2">
+      <button type="button" class="btn btn-lg btn-block">
+        <i class="glyphicon glyphicon-download-alt"></i>
+      </button>
+    </div>
+  
+  </div>
 </div>
 <!-- /.row -->
+
