--- a/res/application/views/components/slider-productos-principales.html.twig
+++ b/res/application/views/components/slider-productos-principales.html.twig
@@ -1,7 +1,7 @@
 <div class="row">
 	<div class="col-xs-12 productos_principales">
         <h3 class="titulos"><strong>Productos Principales</strong></h3>
-        <div class="multiple-items">
+        <div class="slider_producto">
             <div class="item_slider_producto">
                 <img src="http://lorempixel.com/100/71/" alt="" class="imagen">
                 <p class="nombre_producto">Insertar Variable para nombre</p>
@@ -24,7 +24,7 @@
             </div>
         </div>
 		<div class="col-xs-12">
-			<button class="btn btn-default ver_todo">Ver Todos</button>
+			<button class="btn ver_todo">Ver Todos</button>
 		</div>
 	</div>
 	<!-- ./col-xs-12 -->
