Correcion para aprobar del icono de ubicacion en nosotros

--- a/res/application/views/empresa/inicio_movil.html.twig
+++ b/res/application/views/empresa/inicio_movil.html.twig
@@ -33,6 +33,9 @@
     {% include "components/banners.html.twig" %}
     {% include "components/slider-productos-principales.html.twig" %}
     {% include "components/boton_solicitar_cotizacion.html.twig" %}
+    <h3>
+        Nuestra empresa
+    </h3>    
     {% include "components/nuestra-empresa.html.twig" %}
     <div class="row">
         <div class="col-xs-6" style="padding-right: 1px">
