--- a/res/application/views/components/nuestra-empresa.html.twig
+++ b/res/application/views/components/nuestra-empresa.html.twig
@@ -1,18 +1,85 @@
 <div class="row">
-	<div class="col-xs-12 nuestra_empresa">
-		<h3 class="titulos"><strong>Nuestra Empresa</strong></h3>
-		<p class="font-naranja titulo_empresa"><strong>{{ empresa.nombre|title }}</strong></p>
-        <p class="titulo_membresia"><img class="inline-block img_membresia" src="{{ img_url() }}membresia/{{ membresia.logo }}" alt="Icono Membresia">Empresa Platino <!-- insertar variable -->
-        {% if empresa.verificacion == 'Y' %}
-        <span class="titulo_validacion"><img class="inline-block img_verificacion" src="{{ img_url() }}membresia/Check_mark__64.png" alt="Icono de verificacion">Verificada</span></p><p class="ciudad"><i class="fa fa-map-marker font-naranja ico_puntero"></i>{{ usuario.ciudad|title }}</p>
-       	{% endif %}
-        <p class="descripcion_empresa">{{empresa.descripcion}}</p>
-        <p class="dato_empresa">Ubicación: <span class="variable">{{ usuario.ciudad|title}}</span></p><!-- añadir variable departamento -->
-        <p class="dato_empresa">Tipo de Empresa: <span class="variable">{{empresa.tipo|title}}</span></p>
-        <p class="dato_empresa_ppales">Productos Principales: <span class="variable_ppales">{{empresa.productos_principales|title}}</span></p>
-		<p class="catalogo"><span class="glyphicon glyphicon-th ico_cat_soli"></span>Ver Catálogo -<a href="#" class="productos"> 5 - productos</a></p> <!-- insertar variable -->
-		<p class="catalogo"><span class="glyphicon glyphicon-list-alt ico_cat_soli"></span>Productos Solicitados -<a href="#" class="productos"> 4 - Solicitudes</a></p> <!-- insertar variable -->	
-	</div>
-	<!-- /.col-xs-12 -->
+    <div class="col-xs-12">
+        <div class="row">
+            <div class="col-xs-12">
+                <h3 class="titulos font-naranja"><strong>{{ empresa.nombre|title }}</strong></h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-6">
+                <img class="" src="{{ img_url() }}membresia/{{ membresia.logo }}" 
+                alt="Icono Membresia" width="20px">
+                Empresa Platino
+                {% if empresa.verificacion == 'Y' %}
+                <span class="titulo_validacion">
+                    <img class="inline-block img_verificacion" src="{{ img_url() }}membresia/Check_mark__64.png" alt="Icono de verificacion" width="20px">
+                    Verificada
+                </span>
+                {% endif %}
+            </div>
+            <div class="col-xs-6">
+                <i class="fa fa-map-marker font-naranja"></i> 
+                Buenaventura
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="col-xs-12">
+                <p class="descripcion_empresa">
+                    {{empresa.descripcion}}
+                </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12">
+                <div class="row">
+                    <div class="col-xs-12">
+                        Ubicación: 
+                        <span class="">
+                            {{ usuario.ciudad|title}}
+                        </span>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-12">
+                        Tipo de Empresa: 
+                        <span class="">
+                            {{empresa.tipo|title}}
+                        </span>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-12">
+                        Productos Principales: 
+                        <span class="">
+                            {{empresa.productos_principales|title}}
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="col-xs-12">
+                <p class="catalogo">
+                    <i class="glyphicon glyphicon-th ico_cat_soli"></i>
+                    Ver Catálogo - 
+                    <a href="#" class="productos"> 5 - productos  <!-- insertar variable -->
+                    </a>
+                </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12">
+                <p class="catalogo">
+                <i class="glyphicon glyphicon-list-alt ico_cat_soli"></i>
+                Productos Solicitados -
+                <a href="#" class="productos">
+                    4 - Solicitudes
+                </a>
+            </div>
+        </p> 
+            
+        </div>
+    </div>
 </div>
-	<!-- /.row -->	
