Ajustes en boton contacto

--- a/res/application/views/components/boton_contactenos.html.twig
+++ b/res/application/views/components/boton_contactenos.html.twig
@@ -1,10 +1,8 @@
-<div class="row header">
+<div class="row">
     <div class="col-xs-12">
         <button class="btn btn-block btn-lg color-naranja">
-            <i class="glyphicon glyphicon-envelope icono"></i>
-            <strong>
-                CONTÁCTENOS
-            </strong>
+        <i class="fa fa-envelope"></i>
+        Contactenos
         </button>
     </div>
 </div>
