--- a/res/application/views/components/slider-touch-videos.html.twig
+++ b/res/application/views/components/slider-touch-videos.html.twig
@@ -2,22 +2,29 @@
     <div class="col-xs-12">
         <h3 class="titulos"><strong>Videos de la Empresa</strong></h3>
         <div class="multiple-items">
-            <div class="video">
-                <iframe width="140" height="70" src="https://www.youtube.com/embed/eWK5DUlaJhw" frameborder="0" allowfullscreen></iframe>
+            <div>
+                <img 
+                src="https://i.ytimg.com/vi/gVhd_vLYgd4/hqdefault.jpg" 
+                alt="">
             </div>
-            <div class="separador"></div>
-            <div class="video">
-                <iframe width="140" height="70" src="https://www.youtube.com/embed/6FfjQDfRx0k" frameborder="0" allowfullscreen></iframe>
+            <div>
+                <img 
+                src="https://i.ytimg.com/vi/J44NKsBg20w/hqdefault.jpg" 
+                alt="">
+                <span class="fa fa-play video"></span>
             </div>
-            <div class="separador"></div>        
-            <div class="video">
-                <iframe width="140" height="70" src="https://www.youtube.com/embed/Ofcg6qVqwlk" frameborder="0" allowfullscreen></iframe>
+            <div>
+                <img 
+                src="https://i.ytimg.com/vi/vKUiaMEOH18/hqdefault.jpg" 
+                alt="">
             </div>
-            <div class="separador"></div>
-            <div class="video">
-                <iframe width="140" height="70" src="https://www.youtube.com/embed/Ofcg6qVqwlk" frameborder="0" allowfullscreen></iframe>
+            <div>
+                <img 
+                src="https://i.ytimg.com/vi/nZolJafJM_c/hqdefault.jpg" 
+                alt="">
             </div>
-            <div class="separador"></div>
+
         </div>
     </div>
 </div>
+
