--- a/res/application/views/components/nuestra-empresa.html.twig
+++ b/res/application/views/components/nuestra-empresa.html.twig
@@ -2,24 +2,32 @@
     <div class="col-xs-12">
         <div class="row">
             <div class="col-xs-12">
-                <h3 class="titulos font-naranja"><strong>{{ empresa.nombre|title }}</strong></h3>
+                <h2 class="titulos font-naranja"><strong>{{ empresa.nombre|title }}</strong></h2>
             </div>
         </div>
         <div class="row">
-            <div class="col-xs-6">
+            <div class="col-xs-12">
                 <img class="" src="{{ img_url() }}membresia/{{ membresia.logo }}" 
                 alt="Icono Membresia" width="20px">
-                Empresa Platino
+                <span class="texto-membresia">
+                    Empresa Platino
+                </span>
+            </div>
+            <div class="col-xs-6">
                 {% if empresa.verificacion == 'Y' %}
                 <span class="titulo_validacion">
                     <img class="inline-block img_verificacion" src="{{ img_url() }}membresia/Check_mark__64.png" alt="Icono de verificacion" width="20px">
-                    Verificada
+                    <span class="texto-membresia">
+                        Verificada
+                    </span>
                 </span>
                 {% endif %}
             </div>
             <div class="col-xs-6">
                 <i class="fa fa-map-marker font-naranja"></i> 
-                Buenaventura
+                <span class="texto-membresia">
+                    Buenaventura
+                </span>
             </div>
         </div>
         <hr>
@@ -34,7 +42,9 @@
             <div class="col-xs-12">
                 <div class="row">
                     <div class="col-xs-12">
-                        Ubicación: 
+                        <span class="font-gris">
+                            Ubicación: 
+                        </span>
                         <span class="">
                             {{ usuario.ciudad|title}}
                         </span>
@@ -42,27 +52,41 @@
                 </div>
                 <div class="row">
                     <div class="col-xs-12">
-                        Tipo de Empresa: 
-                        <span class="">
+                        <span class="font-gris">
+                            Tipo de Empresa: 
+                        </span>
+                        <span>
                             {{empresa.tipo|title}}
                         </span>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-xs-12">
-                        Productos Principales: 
-                        <span class="">
-                            {{empresa.productos_principales|title}}
+                        <span class="font-gris">
+                            Categoria principal: 
+                        </span>
+                        <span>
+                            Construcción y Arquitectura
                         </span>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-xs-12">
+                        <span class="font-gris">
+                            Productos Principales: 
+                        </span>
+                        <span>
+                            {{empresa.productos_principales|title}}
+                        </span>
+                    </div>
+                </div>                
             </div>
         </div>
         <hr>
         <div class="row">
             <div class="col-xs-12">
-                <p class="catalogo">
-                    <i class="glyphicon glyphicon-th ico_cat_soli"></i>
+                <p class="catalogo ">
+                    <i class="glyphicon glyphicon-th ico_cat_soli font-gris"></i>
                     Ver Catálogo - 
                     <a href="#" class="productos"> 5 - productos  <!-- insertar variable -->
                     </a>
@@ -72,7 +96,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <p class="catalogo">
-                <i class="glyphicon glyphicon-list-alt ico_cat_soli"></i>
+                <i class="glyphicon glyphicon-list-alt ico_cat_soli font-gris"></i>
                 Productos Solicitados -
                 <a href="#" class="productos">
                     4 - Solicitudes
