--- a/res/application/views/empresa/inicio_movil.html.twig
+++ b/res/application/views/empresa/inicio_movil.html.twig
@@ -29,6 +29,7 @@
 {% block content %}
     {% include "components/top_menu.html.twig" %}
     {% include "components/header_empresa.html.twig" %}
+    {% set inicio = true %}
     {% include "components/navbar_empresa.html.twig" %}
     {% include "components/banners.html.twig" %}
     {% include "components/slider-productos-principales.html.twig" %}
