--- a/res/application/views/empresa/nosotros_movil.html.twig
+++ b/res/application/views/empresa/nosotros_movil.html.twig
@@ -27,6 +27,7 @@
 {% block content %}
     {% include "components/top_menu.html.twig" %}
     {% include "components/header_empresa.html.twig" %}
+    {% set nosotros = true %}
     {% include "components/navbar_empresa.html.twig" %}
     {% include "components/mision.html.twig" %}
     {% include "components/vision.html.twig" %}
