--- a/res/application/views/empresa/catalogo_movil.html.twig
+++ b/res/application/views/empresa/catalogo_movil.html.twig
@@ -29,6 +29,7 @@
 {% block content %}
     {% include "components/top_menu.html.twig" %}
     {% include "components/header_empresa.html.twig" %}
+    {% set catalogo_producto = true %}
     {% include "components/navbar_empresa.html.twig" %}
     {% include "components/boton_solicitar_cotizacion.html.twig" %}
     {% include "components/lista_productos.html.twig" %}
