--- a/res/application/views/empresa/contacto_movil.html.twig
+++ b/res/application/views/empresa/contacto_movil.html.twig
@@ -27,6 +27,7 @@
 {% block content %}
     {% include "components/top_menu.html.twig" %}
     {% include "components/header_empresa.html.twig" %}
+    {% set contacto = true %}
     {% include "components/navbar_empresa.html.twig" %}
     {% include "components/boton_contactenos.html.twig" %}
     {% include "components/contacto.html.twig" %}
